--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,9 @@
     <span>Todo App With Firebase and Material Design</span>
   </md-toolbar>
 
-   <button md-button class="md-icon-button" aria-label="More" (click)="showForm()">
-      <i md-icon>more_vert</i>
-    </button>
-
   <md-card class="mainDiv" *ngIf="showFormData">
     <md-card-title>
-      New Todo
+      Todo
     </md-card-title>
     <md-card-content>
       <div layout="column" class="md-inline-form">
@@ -19,28 +15,41 @@
           <md-input placeholder="Title" style="width: 100%" [(ngModel)]="model.title" name="title"></md-input>
           <md-input placeholder="Details" style="width: 100%" [(ngModel)]="model.details" name="details"></md-input>
           <p>Priority:</p>
-          <md-radio-group [(ngModel)]="model.priority" [ngModelOptions]="{standalone: true}" [(ngModel)]="model.priority" name="priority">
-            <md-radio-button value="High" class="md-primary"> High </md-radio-button>
-            <md-radio-button value="Medium" checked="true" class="md-primary"> Medium </md-radio-button>
-            <md-radio-button value="Low" class="md-primary"> Low </md-radio-button>
+          <md-radio-group [(ngModel)]="model.priority" [ngModelOptions]="{standalone: true}"
+                          [(ngModel)]="model.priority" name="priority">
+            <md-radio-button value="High" class="md-primary"> High</md-radio-button>
+            <md-radio-button value="Medium" checked="true" class="md-primary"> Medium</md-radio-button>
+            <md-radio-button value="Low" class="md-primary"> Low</md-radio-button>
           </md-radio-group>
-          <div>
-            <button md-raised-button class="md-raised md-primary" type="submit">Primary</button>
+          <div class="moveButtonsToCenter">
+            <button md-raised-button class="md-raised md-primary" type="submit">Save</button>
+            <button md-raised-button class="md-raised md-accent" type="button" (click)="showForm()">Cancel</button>
           </div>
         </form>
       </div>
     </md-card-content>
   </md-card>
-
-  <md-list>
-    <md-list-item class="md-3-line" *ngFor="let item of items | async; let ind = index" ng-if="items.length">
-      <div class="md-list-item-text" layout="column">
-        <h3>{{item.title}}</h3>
-        <span (click)="updateData(item)">Click Here</span>
-        
-        <!--<h4>{{ item.what }}</h4>
-      <p>{{ item.notes }}</p>-->
-      </div>
-    </md-list-item>
-  </md-list>
+  <md-card class="todoCardMargin" *ngIf="!showFormData" ng-if="items.length">
+    <md-card-title>
+      List of Todos
+    </md-card-title>
+    <table>
+      <tr>
+        <th></th>
+        <th class="todoTitleWidth">Title</th>
+        <th>Action</th>
+      </tr>
+      <tr *ngFor="let item of items | async; let ind = index">
+        <td>{{ind+1}}.</td>
+        <td>{{item.title}}</td>
+        <td>
+          <button md-raised-button color="primary" md-line (click)="updateData(item)" class="normalSizeButton">Update
+          </button>
+        </td>
+      </tr>
+    </table>
+  </md-card>
+  <button md-fab class="customButtonPosition" color="primary" (click)="showForm()">
+    <md-icon class="md-24">add</md-icon>
+  </button>
 </div>
